--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -60,7 +60,7 @@ footer
           '@Dathink
 
 .modal.animated
-  img src="http://s.cdpn.io/190177/Daft_Punk.svg" class="daft-punk-logo"
+  img src="assets/images/Daft_Punk.svg" class="daft-punk-logo"
   h1 “Harder, Better, Faster, Stronger”
   h2
     'Please choose your keyboard
